[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rokid-spatial-macos"
version = "0.1.0"
description = "macOS spatial computing driver for Rokid Max AR glasses"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "xXJSONDeruloXx", email = "danielhimebauch@gmail.com" },
]
keywords = ["rokid", "ar", "spatial-computing", "head-tracking", "imu"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Human Machine Interfaces",
]
dependencies = [
    "hidapi>=0.14",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "ruff>=0.4",
]

[project.scripts]
rokid-track = "rokid_spatial.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/rokid_spatial"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "hardware: tests that require a physical Rokid Max device",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
